--- a/style.css
+++ b/style.css
@@ -28,3 +28,9 @@ li,a {
     display: inline-block;
     padding: 0 20px;
 }
+
+.about_me {
+    padding-top: 100px;
+    text-align: center;
+    font-family: "Work Sans";
+}
