--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ li,a {
     padding: 0 20px;
 }
 
-.about_me {
+.about_me, .about_me2 {
     padding-top: 100px;
     text-align: center;
     font-family: "Work Sans";
