--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Loka</title>
+    <script>
+
+    </script>
 </head>
 <body>
     <header class="header">
@@ -28,6 +31,11 @@
     <div class="about_me2">
         <b>On this website you can find information about me.
             On right top you can find me in social medias</b>
+    </div>
+    <div class="fotos">
+        <a href="@">
+            <img class="pivo" src="Снимок экрана 2022-10-17 в 10.33.08.png" alt="pivo_man">
+        </a>
     </div>
 </body>
 </html>
