--- a/templates/about.html
+++ b/templates/about.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Loka</title>
-    <script>
-
-    </script>
 </head>
 <body>
     <header class="header">
@@ -32,9 +29,19 @@
         <b>On this website you can find information about me.
             On right top you can find me in social medias</b>
     </div>
+    <div class="forms">
+        <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+            <input type="submit" value="Submit">
+          </form>
+    </div>
     <div class="fotos">
-        <a href="@">
+        <a href="https://www.cesualus.lv/ru/produkt/bruza-rus/?prod=Bruza-Samtainais" target="_blank">
             <img class="pivo" src="Снимок экрана 2022-10-17 в 10.33.08.png" alt="pivo_man">
+            <img class="pivo_move" src="/images/biere-faim.gif">
         </a>
     </div>
 </body>
